--- a/manifests/04-syslog-relay-pvc.yaml
+++ b/manifests/04-syslog-relay-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: syslog-relay-log-dest
+  name: syslog-relay-buffer
   namespace: default
 spec:
   accessModes:
